added map fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="message">Message</string>
     <string name="profile">Profile</string>
     <string name="tips">Tips</string>
+    <string name="option_get_place">Get location</string>
 
 </resources>
