--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,13 @@
     <string name="back_tips_btn">back_tips_btn</string>
     <string name="forward_tips_btn">forward_tips_btn</string>
     <string name="option_get_place">Get location</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_some_interests">Enter Some Interests</string>
+    <string name="submit">Submit</string>
+    <string name="send_a_message">Send a message</string>
+    <string name="send">Send</string>
+    <string name="textview">TextView</string>
+    <string name="add_new_user">Add New User</string>
 
 </resources>
